--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: BK4 - Multi Intelligent Space Regeneration Team
 
 # Your name to show in the footer
-author: Some Person
+author: Prof. Kyung Hoon Hyun
 
 # --- List of links in the navigation bar --- #
 
