--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # the initial set up you won't need to come back to this file often.
 
 # --- Required options --- #
-url: "https://bk4-midesign.github.io"
+url: "https://username.github.io"
 baseurl: ""
 #baseurl: "/beautiful-jekyll"
 
