--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # the initial set up you won't need to come back to this file often.
 
 # --- Required options --- #
-url: "https://bk4-midesign.github.io"
-baseurl: ""
+#url: "https://bk4-midesign.github.io"
+#baseurl: ""
 #baseurl: "/beautiful-jekyll"
 
 # Name of website
@@ -21,7 +21,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "http://www.kyunghoonhyun.com"
 
 # --- Logo --- #
 
@@ -80,7 +80,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+#url-pretty: "MyWebsite.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
