--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # --- Required options --- #
 #url: "https://bk4-midesign.github.io"
-#baseurl: ""
+baseurl: "/cayman/"
 #baseurl: "/beautiful-jekyll"
 
 # Name of website
