--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@
 #baseurl: "/beautiful-jekyll"
 
 # Name of website
-title: BK4
-#BK4 - Multi Intelligent Space Regeneration Team
+title: Multi Intelligent (MI) 공간재생디자인 인재양성팀
 
 # Your name to show in the footer
 author: Hoon
