--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 #baseurl: "/beautiful-jekyll"
 
 # Name of website
-title: Multi Intelligent (MI) 공간재생디자인 인재양성팀
+title: BK4: Multi Intelligent (MI) 공간재생디자인 인재양성팀
 
 # Your name to show in the footer
-author: Hoon
+author: 현경훈
 
 # --- List of links in the navigation bar --- #
 
