--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,19 @@ navbar-links:
     - 목표: "aboutme"
     - 참여교수: "aboutme"
     - 참여학생: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "http://www.kyunghoonhyun.com"
-
+  교육과정:
+    - 석사과정: "https://beautifuljekyll.com"
+    - 박사과정: "https://www.markdowntutorial.com/"
+  연구실적: "http://www.kyunghoonhyun.com"
+    - 논문: "aboutme"
+    - 전시: "aboutme"
+    - 수상: "aboutme"
+  
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+# avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
