--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     - 논문: "aboutme"
     - 전시: "aboutme"
     - 수상: "aboutme"
-  
+  한양대: "http://www.kyunghoonhyun.com"  
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
