--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,19 @@ author: 현경훈
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  사업팀소개: 
+  사업팀 소개:
     - 목표: "aboutme"
     - 참여교수: "aboutme"
     - 참여학생: "aboutme"
   교육과정:
-    - 석사과정: "https://beautifuljekyll.com"
-    - 박사과정: "https://www.markdowntutorial.com/"
-  연구실적: "http://www.kyunghoonhyun.com"
+    - 석사과정: "aboutme"
+    - Past Conferences: "aboutme"
+    - 박사과정: "aboutme"
+  연구실적:
     - 논문: "aboutme"
     - 전시: "aboutme"
     - 수상: "aboutme"
+
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
