--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
     - 수상: "research-award"
     - 특허: "research-patent"
     - 워크샵: "research-workshop"
-  한양대학교: "aboutme"
+  한양대학교: "https://www.interior.hanyang.ac.kr"
   
 # --- Logo --- #
 
