--- a/_config.yml
+++ b/_config.yml
@@ -140,7 +140,8 @@ footer-link-col: "#404040"
 # --- Web Analytics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-gtag: "G-CTSVNH4071"
+#gtag: "G-CTSVNH4071"
+gtag: "G-YP95LB6RXM"
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
