--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 #baseurl: "/beautiful-jekyll"
 
 # Name of website
-title: BK4 - Multi Intelligent (MI) 공간재생디자인 인재양성팀
+title: BK4 - MI 공간재생디자인 인재양성팀
 
 # Your name to show in the footer
 author: 현경훈
