--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ round-avatar: true
 
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
-#social-network-links:
+social-network-links:
   email: "hoonhello@hanyang.ac.kr"
 #  facebook: deanattali
 #  github: daattali
@@ -82,11 +82,11 @@ rss-description: BK4-Multi Intelligent Space Regeneration Design Team
 # --- General options --- #
 
 # Select which social network share links to show in posts
-#share-links-active:
-#  twitter: true
-#  facebook: true
-#  linkedin: true
-#  vk: false
+share-links-active:
+  twitter: true
+  facebook: true
+  linkedin: true
+  vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
