--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
     - 특허: "research-patent"
     - 워크샵: "research-workshop"
     - 행사사진 및 포스터: "research-photo"
-  한양대학교: "https://www.interior.hanyang.ac.kr"
+  한양대학교: "https://interior.hanyang.ac.kr/home"
   
 # --- Logo --- #
 
